adding some hbs partials and little correction in the navbar

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,7 +77,8 @@
                                             <span class="ps-2"> {{user.first_name}}</span>
                                         </a>
                                         <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
-                                            <li><a class="dropdown-item" href="subs/cart_sopping.html">Carrito</a></li>
+                                            <li><a class="dropdown-item" href="/marketplace/cart_shopping">Carrito</a></li>
+                                            <li><a class="dropdown-item" href="/marketplace/order">Pedido</a></li>
                                             <li><a class="dropdown-item" href="/profile">Perfil</a></li>
                                             <li>
                                                 <hr class="dropdown-divider">
