--- a/views/session/profile_customers.hbs
+++ b/views/session/profile_customers.hbs
@@ -113,61 +113,7 @@
     <!-- footer section -->
     
     <section id="footer">
-        <footer>
-            <div class="container-fluid footer-container mt-4">
-                <div class="container text-start">
-                    <div class="row">
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Contenido</h3>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Portada</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Productos mas vendidos</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Blog</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Informacion</h3>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Ubicacion</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Negocio</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Contacto</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Redes Sociales</h3>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-square-whatsapp"></i></a>
-                                    <a href=""></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-                <h4 class="copyright">Copyright © 2022 Tienda Electrónica OVA S.R.L. Todos los derechos reservados.</h4>
-            </div>
-        </footer>
+        {{> footer}}
     
     </section>
     <!-- bootstrap js cdn -->
@@ -177,7 +123,7 @@
         crossorigin="anonymous"></script>
     
     <!-- js custom -->
-    <script src="../js/market.js"></script>
+    <script src="/js/market.js"></script>
 
 </body>
 </html>
