--- a/public/css/styles_item.css
+++ b/public/css/styles_item.css
@@ -27,7 +27,14 @@ a {
     text-decoration: none;
 }
 
+/* getting rid of those arrow in the input number */
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /* heading section */
 
@@ -49,6 +56,21 @@ a {
     padding: 3% 15% 3%;
 }
 
+.brand-container {
+    width: 80px;
+    height: 40px;
+    position: relative;
+    overflow: hidden;
+}
+
+.brand-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 110%;
+    height: 120%;
+}
 
 /* categories section */
 
@@ -150,4 +172,13 @@ footer i:hover {
         display: none;
     }
 
+}
+
+@media (max-width: 576px) {
+    .brand-container {
+        width: 60px;
+        height: 33px;
+        position: relative;
+        overflow: hidden;
+    }
 }
