--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -33,36 +33,7 @@
 
     <!-- heading section -->
 
-    <section id="heading">
-        <div class="container-fluid container-heading">
-
-            <h1>Horarios de atencion : </h1>
-            <h2>10:30 - 20:30 mañanas</h2>
-            <h2>10:30 - 20:30 tardes</h2>
-            <h3>abierto</h3>
-
-            <div class="search-bar-container">
-                <div class="row">
-                    <div class="col col-12 col-lg-4">
-                    </div>
-                    <div class="col col-8 col-lg-4">
-                        <form action="/marketplace/search/" class="d-flex" role="search" method="get">
-                            <input class="form-control me-2 " type="search" placeholder="Buscar" name="search" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
-
-                        </form>
-                    </div>
-                    <div class="col col-4 text-end">
-                        <a class="btn btn-primary" href="/marketplace/cart_shopping" role="button"><i class="fa-solid fa-cart-shopping"></i>
-                            <span class="sopping-cart-text">Carrito</span></a>
-                    </div>
-                </div>
-            </div>
-            <hr>
-        </div>
-
-    </section>
+    {{> market_header}}
 
     <!-- categories section -->
 
