--- a/views/session/profile_customers.hbs
+++ b/views/session/profile_customers.hbs
@@ -28,36 +28,7 @@
     
     <!-- heading section -->
     
-    <section id="heading">
-        <div class="container-fluid container-heading">
-    
-            <h1>Horarios de atencion : </h1>
-            <h2>10:30 - 20:30 mañanas</h2>
-            <h2>10:30 - 20:30 tardes</h2>
-            <h3>abierto</h3>
-    
-            <div class="search-bar-container">
-                <div class="row py-2">
-                    <div class="col col-12 col-lg-4">
-                    </div>
-                    <div class="col col-8 col-lg-4">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
-    
-                        </form>
-                    </div>
-                    <div class="col col-4 text-end">
-                        <a class="btn btn-primary" href="#" role="button"><i class="fa-solid fa-cart-shopping"></i>
-                            <span class="sopping-cart-text">Carrito</span></a>
-                    </div>
-                </div>
-            </div>
-            <hr>
-        </div>
-    
-    </section>
+    {{> market_header}}
 
     <!-- login form customers -->
 
