explore the marketplace no login required

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -92,7 +92,7 @@
                                     <div class="card">
                                         <a href="/marketplace/product/{{id}}"><img src="{{img_dir}}" class="card-img-top" alt="..."></a>
                                         <div class="card-body">
-                                            <a href="/marketplace/product/{{id}}"><h5 class="card-title">{{name}}</h5></a>
+                                            <a href="/marketplace/product/{{id}}"><h5 class="card-title text-capitalize">{{name}}</h5></a>
 
                                             {{!-- display according to stock --}}
                                             {{#if little_stock}}
