--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -163,9 +163,9 @@
                                     <div class="row ps-5 ps-lg-0 mb-3">
                                         {{!-- <input type="number" class="form-control" id="inputNumberQuantity" value="1" min="1" max="50" name="quantity"> --}}
                                         <div class="ps-0 ps-lg-5 input-group py-auto my-auto text-center mx-auto justify-content-center" bis_skin_checked="1">
-                                                <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-2 px-sm-3" type="button" id="{{id}}" name="action" value="decrement"><strong>−</strong></button>
+                                                <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="decrement"><strong>−</strong></button>
                                                 <input type="number" inputmode="decimal" min="1" max="50" id="i{{id}}" name="quantity" value="1" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
-                                                <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-2 px-sm-3" type="button" id="{{id}}" name="action" value="increment"><strong>+</strong></button>
+                                                <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="increment"><strong>+</strong></button>
                                         </div>
                                     </div>
                                     <div class="text-center">
