--- a/views/admin/session/a_login.hbs
+++ b/views/admin/session/a_login.hbs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>(admin) OVA</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/log_in.css">
+    <link rel="stylesheet" href="/css/log_in.css">
 </head>
 
 <body class="text-center">
@@ -18,7 +18,19 @@
         <div class="card">
             <div class="card-body">
                 <form action="/admin/login" method="POST">
-                    <h1 class="mb-4">Tienda OVA</h1>
+                    <div class="row">
+                        <div class="col px-0 mt-1 text-end">
+                            <h1 class="mb-0">Tienda </h1>
+                        </div>
+                        <div class="col ">
+                            <a href="/">
+                                <div class=" brand-container rounded mx-0 me-md-auto shadow">
+                                    <img src="/images/brand.png" alt="Logo" class="brand-img">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <span class="fs-6 mb-4 text-warning">(administradores)</span>
                     <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
                     <h1 class="h3 mb-3 fw-normal">Por Favor, Inicie Sesión</h1>
                     
@@ -51,62 +63,7 @@
 
     <!-- footer section -->
     
-    <section id="footer">
-        <footer>
-            <div class="container-fluid footer-container">
-                <div class="container text-start">
-                    <div class="row">
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Contenido</h3>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Portada</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Productos mas vendidos</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Blog</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Informacion</h3>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Ubicacion</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Negocio</p>
-                                </li>
-                                <li>
-                                    <p class="footer-options">Contacto</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col col-12 col-lg-4">
-                            <ul class="footer-list">
-                                <li>
-                                    <h3 class="footer-title">Redes Sociales</h3>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-square-whatsapp"></i></a>
-                                    <a href=""></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-                <h4 class="copyright">Copyright © 2022 Tienda Electrónica OVA S.R.L. Todos los derechos reservados.</h4>
-            </div>
-        </footer>
+    {{> footer}}
     
     </section>
 </body>
