--- a/views/admin/clientsNcustomers/edit_client.hbs
+++ b/views/admin/clientsNcustomers/edit_client.hbs
@@ -207,7 +207,7 @@
 
                 <h2>Historial de Pedidos</h2>
                 {{!-- table --}}
-                <div class="table-sm-responsive">
+                <div class="table-sm-responsive overflow-scroll">
                     {{#if orders}}
                     <table class="table table-hover table-bordered">
                         <thead>
