--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -173,7 +173,7 @@
 
             
                 <h2>Lista de Empleados</h2>
-                <div class="table-sm-responsive mt-4">
+                <div class="table-sm-responsive mt-4 overflow-auto">
                     {{#if employees}}
                         <table class="table table-hover table-bordered">
                             <thead>
