--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -173,7 +173,7 @@
 
                 {{!-- filters --}}
 
-                <div class="table-sm-responsive mt-4">
+                <div class="table-sm-responsive mt-4 overflow-auto">
                 {{#if products}}
                     <table class="table table-hover table-bordered">
                         <thead>
