--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -166,7 +166,7 @@
                 </ul>
                 {{/with}}
 
-                <div class="table-sm-responsive mt-4">
+                <div class="table-sm-responsive overflow-auto">
                 {{#if products}}
                     <table class="table table-hover table-bordered">
                         <thead>
