--- a/views/admin/clientsNcustomers/clients.hbs
+++ b/views/admin/clientsNcustomers/clients.hbs
@@ -163,7 +163,7 @@
                 </div>
             
                 <h2>Clientes Registrados</h2>
-                <div class="table-sm-responsive mt-4">
+                <div class="table-sm-responsive mt-4 overflow-auto">
                     {{#if clients}}
                     <table class="table table-hover table-bordered">
                         <thead>
