--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -153,7 +153,7 @@
                 </div>
 
                 <h2>Categorias Registradas</h2>
-                <div class="table-sm-responsive mt-4">
+                <div class="table-sm-responsive mt-4 overflow-auto">
                     {{#if categories}}
                     <table class="table table-hover table-bordered">
                         <thead>
