--- a/views/admin/products/order_details.hbs
+++ b/views/admin/products/order_details.hbs
@@ -129,8 +129,8 @@
                 <h3>Orden #{{order.id}}</h3>
                 
                 <div class="container-fluid pt-2">
-                    <div class="row">
-                        <div class="col px-0">
+                    <div class="row table-sm-responsive overflow-x-auto">
+                        <div class="col px-0 ">
                             <table class="table table-hover table-bordered">
                                 <thead>
                                     <tr>
