--- a/views/admin/products/orders.hbs
+++ b/views/admin/products/orders.hbs
@@ -248,7 +248,7 @@
                 </div> -->
 
                 {{!-- table --}}
-                <div class="table-sm-responsive">
+                <div class="table-sm-responsive overflow-x-auto">
                     {{#if orders}}
                     <table class="table table-hover table-bordered">
                         <thead>
